✨ feat(table): Adding table parsing

--- a/src/examples/woocommerce.html
+++ b/src/examples/woocommerce.html
@@ -768,6 +768,31 @@
         </div>
       </div>
       <div id="content" class="site-content" tabindex="-1">
+        <table>
+          <thead>
+            <tr>
+              First Name
+            </tr>
+            <tr>
+              Last Name
+            </tr>
+            <tr>
+              Age
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>John</td>
+              <td>Doe</td>
+              <td>25</td>
+            </tr>
+            <tr>
+              <td>Jane</td>
+              <td>Smith</td>
+              <td>30</td>
+            </tr>
+          </tbody>
+        </table>
         <div class="col-full">
           <div class="woocommerce"></div>
           <div id="primary" class="content-area">
